[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical_triage_env"
version = "1.0.0"
description = "Emergency department clinical triage environment"
authors = [{ name = "Murali Sai Rama Krishna Veligeti", email = "muraliveligeti@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.6.0",
    "openenv-core>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.environments"]
clinical_triage = "clinical_triage_env:ClinicalTriageEnv"

[tool.hatch.build.targets.wheel]
packages = ["clinical_triage_env", "server"]

[tool.uv]
dev-dependencies = []